Clean up Cargo.toml files.

--- a/vrpn-connection/Cargo.toml
+++ b/vrpn-connection/Cargo.toml
@@ -6,5 +6,5 @@ license = "BSL-1.0"
 
 [dependencies]
 bytes = "^0.4.10"
-vrpn-base = { version = "0.1.0", path = "../vrpn-base" }
-vrpn-buffer = { version = "0.1.0", path = "../vrpn-buffer" }
+vrpn-base = { path = "../vrpn-base" }
+vrpn-buffer = { path = "../vrpn-buffer" }
