--- a/vrpn-buffer/Cargo.toml
+++ b/vrpn-buffer/Cargo.toml
@@ -9,5 +9,4 @@ bytes = "^0.4.10"
 quick-error = "^1.2.2"
 libc = "^0.2"
 itertools = "^0.7"
-nom = "^4.1"
-vrpn-base = { version = "0.1.0", path = "../vrpn-base" }
+vrpn-base = { path = "../vrpn-base" }
