--- a/vrpn-buffer/Cargo.toml
+++ b/vrpn-buffer/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Ryan Pavlik <ryan.pavlik@collabora.com>"]
 license = "BSL-1.0"
 
 [dependencies]
-bytes = "^0.4.10"
-quick-error = "^1.2.2"
-libc = "^0.2"
-itertools = "^0.7"
+bytes = "0.4.10"
+quick-error = "1.2.2"
+libc = "0.2.43"
+itertools = "0.7.8"
 vrpn-base = { path = "../vrpn-base" }
