--- a/vrpn-connection/Cargo.toml
+++ b/vrpn-connection/Cargo.toml
@@ -6,6 +6,7 @@ license = "BSL-1.0"
 
 [dependencies]
 bytes = "0.4.10"
+downcast-rs = "1.0.3"
 quick-error = "1.2.2"
 vrpn-base = { path = "../vrpn-base" }
 vrpn-buffer = { path = "../vrpn-buffer" }
