--- a/vrpn-buffer/Cargo.toml
+++ b/vrpn-buffer/Cargo.toml
@@ -3,6 +3,7 @@ name = "vrpn-buffer"
 version = "0.1.0"
 authors = ["Ryan Pavlik <ryan.pavlik@collabora.com>"]
 license = "BSL-1.0"
+edition = "2018"
 
 [dependencies]
 bytes = "0.4.10"
