--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,18 @@
-[workspace]
-members = [
-    "vrpn",
-    "vrpn-base",
-    "vrpn-buffer",
-    "vrpn-connection",
-]
+[package]
+name = "vrpn"
+version = "0.1.0"
+authors = ["Ryan Pavlik <ryan.pavlik@collabora.com>"]
+license = "BSL-1.0"
+edition = "2018"
+
+[dependencies]
+bytes = "0.4.10"
+bitmask = "0.4.0"
+cgmath = "0.16.1"
+quick-error = "1.2.2"
+downcast-rs = "1.0.3"
+mio = "0.6.16"
+tokio = "0.1.11"
+socket2 = "0.3.8"
+futures = "0.1.25"
+pretty-hex = "0.1.0"
