--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,7 @@ tokio = "0.1.11"
 socket2 = "0.3.8"
 futures = "0.1.25"
 chrono = "0.4.6"
+
+[dev-dependencies]
+quickcheck = "0.7.2"
+hex-literal = "0.1.1"
