Work on changing how connections are established.
Builds, but does not run.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,11 @@ quick-error = "1.2.2"
 downcast-rs = "1.0.3"
 mio = "0.6.16"
 tokio = "0.1.11"
+tk-listen = "0.2.0"
 socket2 = "0.3.8"
 futures = "0.1.25"
 chrono = "0.4.6"
+url = "1.7.2"
 
 [dev-dependencies]
 quickcheck = "0.7.2"
