--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 
 [dependencies]
 bytes = "0.4.12"
-bitmask = "0.4.0"
+bitflags = "1.3"
 cgmath = "0.17.0"
 quick-error = "1.2.2"
 downcast-rs = "1.0.4"
@@ -19,9 +19,10 @@ tokio = "0.1.19"
 tk-listen = "0.2.1"
 socket2 = "0.3.9"
 futures = "0.1.26"
-chrono = "0.4.6"
-url = "2.2.2"
+chrono = "^0.4.6"
+url = "^2.2.2"
 
 [dev-dependencies]
 hex-literal = "0.3.3"
-proptest = "1.0.0"
+proptest = "^1.0.0"
+
