--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ readme = "README.md"
 bytes = "0.4.12"
 bitflags = "1.3"
 cgmath = "0.17.0"
-quick-error = "1.2.2"
+quick-error = "^2.0.1"
 downcast-rs = "1.0.4"
 mio = "0.6.16"
 tokio = "0.1.19"
