--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,9 @@ bitflags = "1.3"
 cgmath = "0.18.0"
 quick-error = "^2.0.1"
 downcast-rs = "1.0.4"
-mio = "0.6.16"
-tokio = "0.1.19"
-tk-listen = "0.2.1"
+mio = { version = "0.6.16", optional = true }
+tokio = { version = "0.1.19", optional = true }
+tk-listen = { version = "0.2.1", optional = true }
 socket2 = "0.3.9"
 futures = "0.1.26"
 chrono = "^0.4.6"
@@ -26,3 +26,13 @@ url = "^2.2.2"
 hex-literal = "0.3.3"
 proptest = "^1.0.0"
 
+[features]
+async-tokio = ["tokio", "mio", "tk-listen"]
+
+[[bin]]
+name = "print_devices"
+required-features = ["async-tokio"]
+
+[[bin]]
+name = "null_tracker"
+required-features = ["async-tokio"]
