--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,14 @@ bitflags = "1.3"
 cgmath = "0.18.0"
 quick-error = "^2.0.1"
 downcast-rs = "1.0.4"
-mio = { version = "0.6.16", optional = true }
-tokio = { version = "0.1.19", optional = true }
+# mio = { version = "0.6.16", optional = true }
+# mio = "0.6.16"
+tokio = { version = "0.3",  features = ["full"], optional = true }
+tokio-compat-02 = "0.2.0"
+# tokio = "1.11.0"
 tk-listen = { version = "0.2.1", optional = true }
 socket2 = "0.4.2"
-futures = "0.1.26"
+futures= { version = "0.3.17", features = ["compat"] }
 chrono = "^0.4.6"
 url = "^2.2.2"
 
@@ -27,7 +30,9 @@ hex-literal = "0.3.3"
 proptest = "^1.0.0"
 
 [features]
-async-tokio = ["tokio", "mio", "tk-listen"]
+# async-tokio = ["tokio", "mio", "tk-listen"]
+async-tokio = ["tokio", "tk-listen"]
+# async-tokio = []
 
 [[bin]]
 name = "print_devices"
