--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ downcast-rs = "1.0.4"
 # mio = { version = "0.6.16", optional = true }
 # mio = "0.6.16"
 tokio = { version = "0.3",  features = ["full"], optional = true }
+tokio-util = { version = "0.2",  features = ["udp", "codec"],optional = true }
 tokio-compat-02 = "0.2.0"
 # tokio = "1.11.0"
 tk-listen = { version = "0.2.1", optional = true }
@@ -31,7 +32,7 @@ proptest = "^1.0.0"
 
 [features]
 # async-tokio = ["tokio", "mio", "tk-listen"]
-async-tokio = ["tokio", "tk-listen"]
+async-tokio = ["tokio", "tk-listen", "tokio-util"]
 # async-tokio = []
 
 [[bin]]
