--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ repository = "https://github.com/vrpn/vrpn-rs"
 version = "0.1.0"
 
 [dependencies]
+async-std = {version = "1.10.0", optional = true}
 bitflags = "1.3"
 bytes = "1.1.0"
 cgmath = "0.18.0"
@@ -47,3 +48,7 @@ name = "sync_client_simple"
 
 [[bin]]
 name = "sync_client"
+
+[[bin]]
+name = "vrpn_async_std_client"
+required-features = ["async-std"]
