--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,3 +52,8 @@ name = "sync_client"
 [[bin]]
 name = "vrpn_async_std_client"
 required-features = ["async-std"]
+
+# The development profile, used for `cargo build`
+[profile.dev]
+opt-level = 0  # Controls the --opt-level the compiler builds with
+debug = true   # Controls whether the compiler passes `-g`
