--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ version = "0.1.0"
 
 [dependencies]
 async-std = {version = "1.10.0", optional = true}
+async-stream = {version = "0.3.2", optional = true}
 bitflags = "1.3"
 bytes = "1.1.0"
 cgmath = "0.18.0"
@@ -35,7 +36,7 @@ tokio-test = "0.4.2"
 async-tokio = ["tokio", "tk-listen", "tokio-util"]
 # async-tokio = []
 incomplete-tokio = ["async-tokio"]
-vrpn-async-std = ["async-std", "pin-project-lite"]
+vrpn-async-std = ["async-std", "pin-project-lite", "async-stream"]
 
 [[bin]]
 name = "vrpn_tokio_print_devices"
