--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ async-std = {version = "1.10.0", optional = true}
 async-stream = {version = "0.3.2", optional = true}
 bitflags = "1.3"
 bytes = "1.1.0"
-cgmath = "0.18.0"
+cgmath = {version = "0.18.0", optional = true}
 chrono = "^0.4.6"
 futures = {version = "0.3.17", features = ["compat"]}
 pin-project-lite = {version = "0.2", optional = true}
